Replace react-native-safe-area-view-with-get-inset with react-native-static-safe-area-insets and upgrade react-native-device-info to support iPhone 12 layouts. Add styled pagination bubbles to introMode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,13 @@
     "**/.factorypath": true
   },
   "workbench.colorTheme": "Tomorrow Night Blue",
+  "workbench.colorCustomizations": {
+    "editor.selectionBackground": "#ca1f1f",
+    "editor.findMatchBackground": "#6122d6",
+    "editor.findMatchHighlightBackground": "#00ffd569",
+  },
+  "editor.occurrencesHighlight": false,
+  "editor.selectionHighlight": false,
   "search.quickOpen.includeHistory": false,
   "typescript.suggest.autoImports": false,
   "search.exclude": {
