--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyUITests.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyUITests.xcscheme
@@ -44,6 +44,13 @@
             ReferencedContainer = "container:Pathify.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "develop"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <LocationScenarioReference
          identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
          referenceType = "1">
