--- a/sample/json5/mapZoom.json5
+++ b/sample/json5/mapZoom.json5
@@ -3,6 +3,6 @@
   params: {
     center: [ 0, 0 ],
     option: 'relative',
-    zoom: 1234567890, // magic# represents numeric parameter, should be in range 1-20 
+    zoom: 1234567890, // magic# indicates command-line numeric parameter; number given should be in range 1-20 
   }
 }
