Add limit option to appQuery of activities. Exception handling and guard for appQueries.

--- a/sample/json5/longActivities.json5
+++ b/sample/json5/longActivities.json5
@@ -4,9 +4,11 @@
     query: {
       type: 'activities',
       activityRangeQueries: {
-        count: [20000, 999999],
+        count: [0, 999999999],
+        // schemaVersion: [30, 30],
       },
       // countOnly: true,
+      // limit: 8,
     },
   }
 }
