ActivityFilter, boundsForActivity, boundsContained, boundsOverlap, listedActivities selector, flags.filterActivities, options.activityFilter, Disable Mapbox telemetry by default.

--- a/sample/json5/visibleActivities.json5
+++ b/sample/json5/visibleActivities.json5
@@ -4,11 +4,10 @@
     query: {
       type: 'activities',
       activityRangeQueries: {
-        count: [1000, 999999999],
-        // schemaVersion: [30, 30],
       },
       // countOnly: true,
       // limit: 8,
+      visibleOnly: true,
     },
   }
 }
