--- a/app/package.json
+++ b/app/package.json
@@ -23,11 +23,11 @@
     "@types/mapbox-gl": "^1.12.8",
     "@types/radium": "^0.24.3",
     "@types/react-native-vector-icons": "^6.4.6",
-    "@types/react-redux": "^7.1.11",
+    "@types/react-redux": "^7.1.12",
     "@types/uuid": "8.3.0",
     "@types/victory": "^33.1.4",
-    "d3": "^6.2.0",
-    "eslint": "^7.14.0",
+    "d3": "^6.3.1",
+    "eslint": "^7.15.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -36,7 +36,7 @@
     "react-native": "0.63.2",
     "react-native-background-fetch": "3.1.0",
     "react-native-background-geolocation": "^3.9.3",
-    "react-native-device-info": "^7.1.0",
+    "react-native-device-info": "^7.3.1",
     "react-native-dotenv": "0.2.0",
     "react-native-get-random-values": "^1.5.0",
     "react-native-haptic": "^1.0.1",
@@ -47,19 +47,19 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "7.1.0",
     "react-redux": "^7.2.2",
-    "realm": "10.0.1",
+    "realm": "^10.1.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "util": "^0.12.3",
-    "uuid": "8.3.1",
+    "uuid": "8.3.2",
     "victory-native": "^35.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.19",
     "@types/react": "^17.0.0",
     "@types/react-native": "^0.63.37",
     "@types/react-test-renderer": "^17.0.0",
@@ -69,7 +69,7 @@
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.13.1",
     "ts-jest": "26.4.4",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "jest": {
     "preset": "react-native",
