Build 30 adds app catalog with sample JSON for PathifyUITests scheme and target. startupActions can now take an include param with a sample activity (data) from the asset catalog included only in the test bundle. Remove old PathifyTests scheme. ENABLE_BITCODE YES.

--- a/app/package.json
+++ b/app/package.json
@@ -13,14 +13,14 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@react-native-community/cli": "^4.13.1",
     "@react-native-community/slider": "^3.0.3",
-    "@react-native-mapbox-gl/maps": "8.1.0-rc.9",
+    "@react-native-mapbox-gl/maps": "^8.1.0-rc.9",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
     "@types/d3": "^6.2.0",
     "@types/lodash": "^4.14.165",
     "@types/mapbox": "^1.6.39",
-    "@types/mapbox-gl": "^1.12.8",
+    "@types/mapbox-gl": "^2.0.0",
     "@types/radium": "^0.24.3",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.12",
