--- a/sample/json5/exportActivity.json5
+++ b/sample/json5/exportActivity.json5
@@ -3,7 +3,7 @@
   params: {
     query: {
       type: 'exportActivity',
-      activityId: '$$',
+      activityId: '$$', // replaced with command-line parameter
     },
   }
 }
