Add sample0..4 to SampleData.xcassets. Add PathifyNative.swift, called from AppDelegate.m to load sample data into initialProperties NSMutableDictionary for the RN app. JSON is parsed in App.tsx when the main component mounts. sample data is in the main bundle for the Pthify target. Should exclude it from non-test scenarios.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "files.exclude": {
     "**/.flowconfig": true,
     "**/app/android/**": true,
-    "**/app/ios/Pathify.xcodeproj": true,
+    "**/app/ios/Pathify.xcodeproj": false,
     "**/app/shared": true,
     "**/app/shared/**": true,
     "**/package-lock.json": true,
@@ -13,7 +13,7 @@
     "server/src/shared/**": true,
     "**/.classpath": true,
     "**/.project": true,
-    "**/.settings": true,
+    "**/.settings": false,
     "**/.factorypath": true
   },
   "workbench.colorTheme": "Tomorrow Night Blue",
