--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/Pathify Develop.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/Pathify Develop.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1130"
    version = "2.0">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
