--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/Pathify Release.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/Pathify Release.xcscheme
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ABFBED642410C61600A2E0D3"
-               BuildableName = "PathifyUITests.xctest"
-               BlueprintName = "PathifyUITests"
-               ReferencedContainer = "container:Pathify.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -75,6 +65,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "Pathify.app"
+            BlueprintName = "Pathify"
+            ReferencedContainer = "container:Pathify.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
