--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
-   version = "2.0">
+   LastUpgradeVersion = "1220"
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForTesting = "NO"
+            buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
             buildForArchiving = "NO"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Pathify.app"
-               BlueprintName = "Pathify"
+               BlueprintIdentifier = "AB05BE5825895B3800F61526"
+               BuildableName = "PathifyTest.app"
+               BlueprintName = "PathifyTest"
+               ReferencedContainer = "container:Pathify.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "ABFBED642410C61600A2E0D3"
+               BuildableName = "PathifyUITests.xctest"
+               BlueprintName = "PathifyUITests"
                ReferencedContainer = "container:Pathify.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,15 +41,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Pathify.app"
-            BlueprintName = "Pathify"
-            ReferencedContainer = "container:Pathify.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
@@ -48,34 +53,17 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "NO"
-      launchAutomaticallySubstyle = "1">
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Pathify.app"
-            BlueprintName = "Pathify"
+            BlueprintIdentifier = "AB05BE5825895B3800F61526"
+            BuildableName = "PathifyTest.app"
+            BlueprintName = "PathifyTest"
             ReferencedContainer = "container:Pathify.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "develop"
-            value = "true"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "OS_ACTIVITY_MODE"
-            value = "disable"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
-      <LocationScenarioReference
-         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
-         referenceType = "1">
-      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -87,9 +75,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Pathify.app"
-            BlueprintName = "Pathify"
+            BlueprintIdentifier = "AB05BE5825895B3800F61526"
+            BuildableName = "PathifyTest.app"
+            BlueprintName = "PathifyTest"
             ReferencedContainer = "container:Pathify.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
