Add heading option to CenterMapParams

--- a/sample/json5/centerMapAbsolute.json5
+++ b/sample/json5/centerMapAbsolute.json5
@@ -2,6 +2,7 @@
   type: 'centerMap',
   params: {
     center: [ -122.321811, 47.652209 ],
+    heading: 15,
     option: 'absolute',
     zoom: 12,
   }
