test ENV var set in PathifyTest XCode scheme enables testMode flag. AppActions.enableTestScenario saga for testMode when setAppOption testScenario. requestLocationPermission is now stubbed out for testMode, always automatically succeeds.

--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
@@ -64,6 +64,18 @@
             ReferencedContainer = "container:Pathify.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "develop"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "test"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
