--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -7,6 +7,7 @@ platform :ios, '13.0'
 # ignore all warnings from all pods
 inhibit_all_warnings!
 
+ENV['REACT_NATIVE_MAPBOX_MAPBOX_IOS_VERSION'] = '~> 6.2.1';
 
 def setupPathifyPods
 
