--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyUITests.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyUITests.xcscheme
@@ -51,6 +51,10 @@
                BlueprintName = "PathifyUITests"
                ReferencedContainer = "container:Pathify.xcodeproj">
             </BuildableReference>
+            <LocationScenarioReference
+               identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+               referenceType = "1">
+            </LocationScenarioReference>
          </TestableReference>
       </Testables>
    </TestAction>
