Add delays and additional snapshot steps in the Swift UI tests. Add other delays on the enableTestScenario (RN) side to allow async operations time to complete, and refactor test scenarios.

--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
@@ -88,6 +88,11 @@
             value = "true"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "manual"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
