Fix travel mode when simulating location. Support exporting selected or current activity via command line by leaving activityId blank.

--- a/sample/json5/startSimulatingLocation.json5
+++ b/sample/json5/startSimulatingLocation.json5
@@ -1,6 +1,6 @@
 {
   type: 'startSimulatingLocation',
   params: {
-    activityId: '$$',
+    activityId: '$$', // replaced with command-line parameter
   },
 }
