Build 42 updates Realm to 10.1.2, improves enableTestScenario moviePrep and fixes mapOpacity when deliberately set to zero.

--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/PathifyTest.xcscheme
@@ -85,7 +85,7 @@
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "test"
-            value = "true"
+            value = "false"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
