zoomToActivity avoids setting bounds below a configurable minimum threshold, to avoid zooming too far to activities with little or no movement.

--- a/sample/json5/setMaxPaths.json5
+++ b/sample/json5/setMaxPaths.json5
@@ -1,6 +1,6 @@
 {
   type: 'setAppOption',
   params: {
-    maxDisplayPaths: 1234567890,
+    maxDisplayPaths: 1234567890, // magic# indicates command-line numeric parameter
   }
 }
