Build 43 fixes crash due to introduction of yield call(utils.now) in refreshActivity; suspect issue with implementation of Realm results iterator

--- a/sample/json5/activityEvents.json5
+++ b/sample/json5/activityEvents.json5
@@ -3,7 +3,7 @@
   params: {
     query: {
       type: 'activity',
-      events: true,
+      includeEvents: true,
       startIndex: 0,
       limit: 2000,
       count: false,
