--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@react-native-community/cli": "^4.13.1",
     "@react-native-community/slider": "^3.0.3",
-    "@react-native-mapbox-gl/maps": "^8.1.0-rc.4",
+    "@react-native-mapbox-gl/maps": "8.1.0",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^6.4.0",
@@ -35,15 +35,15 @@
     "react-dom": "^17.0.2",
     "react-native": "0.63.2",
     "react-native-background-fetch": "3.1.0",
-    "react-native-background-geolocation": "^3.9.3",
-    "react-native-device-info": "^7.3.1",
+    "react-native-background-geolocation": "^4.1.1",
+    "react-native-device-info": "^8.1.4",
     "react-native-dotenv": "0.2.0",
     "react-native-get-random-values": "^1.7.0",
     "react-native-haptic": "^1.0.1",
     "react-native-restart": "0.0.13",
     "react-native-static-safe-area-insets": "^2.1.1",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "7.1.0",
     "react-redux": "^7.2.2",
