--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@react-native-community/cli": "^4.13.1",
     "@react-native-community/slider": "^3.0.3",
-    "@react-native-mapbox-gl/maps": "8.2.1",
+    "@react-native-mapbox-gl/maps": "8.1.0",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^6.4.0",
@@ -34,7 +34,7 @@
     "react-devtools": "^4.10.0",
     "react-dom": "^17.0.2",
     "react-native": "0.63.2",
-    "react-native-background-fetch": "^3.1.0",
+    "react-native-background-fetch": "3.1.0",
     "react-native-background-geolocation": "^3.10.0",
     "react-native-device-info": "^8.1.4",
     "react-native-dotenv": "0.2.0",
