Xcode 13 project format, Build 59, v1.0.3. Add background processing capability. RealmJS 10.6.0. App running on iOS 15.

--- a/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/Pathify Debug.xcscheme
+++ b/app/ios/Pathify.xcodeproj/xcshareddata/xcschemes/Pathify Debug.xcscheme
@@ -48,7 +48,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "NO"
+      allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "1">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
