--- a/app/package.json
+++ b/app/package.json
@@ -47,7 +47,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "7.1.0",
     "react-redux": "^7.2.2",
-    "realm": "^10.1.2",
+    "realm": "10.6.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
