--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,7 @@
     "react-dom": "^17.0.2",
     "react-native": "0.63.2",
     "react-native-background-fetch": "3.1.0",
-    "react-native-background-geolocation": "^3.10.0",
+    "react-native-background-geolocation": "3.10.0",
     "react-native-device-info": "^8.3.3",
     "react-native-dotenv": "0.2.0",
     "react-native-get-random-values": "^1.7.0",
