--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,7 @@
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^6.4.0",
     "@types/d3": "^7.0.0",
-    "@types/lodash": "^4.14.165",
+    "@types/lodash": "^4.14.174",
     "@types/mapbox": "^1.6.39",
     "@types/mapbox-gl": "^2.0.0",
     "@types/radium": "^0.24.3",
@@ -33,7 +33,7 @@
     "react": "17.0.2",
     "react-devtools": "^4.18.0",
     "react-dom": "^17.0.2",
-    "react-native": "0.63.2",
+    "react-native": "0.66.0-rc.4",
     "react-native-background-fetch": "3.1.0",
     "react-native-background-geolocation": "3.10.0",
     "react-native-device-info": "^8.3.3",
@@ -62,9 +62,9 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-native": "^0.65.1",
-    "@types/react-test-renderer": "^17.0.0",
-    "babel-jest": "27.2.1",
-    "jest": "27.2.1",
+    "@types/react-test-renderer": "^17.0.2",
+    "babel-jest": "27.2.2",
+    "jest": "27.2.2",
     "metro-react-native-babel-preset": "0.66.2",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^17.0.2",
