--- a/app/package.json
+++ b/app/package.json
@@ -18,11 +18,11 @@
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^6.4.0",
     "@types/d3": "^7.0.0",
-    "@types/lodash": "^4.14.174",
+    "@types/lodash": "^4.14.175",
     "@types/mapbox": "^1.6.39",
     "@types/mapbox-gl": "^2.0.0",
     "@types/radium": "^0.24.3",
-    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-native-vector-icons": "^6.4.9",
     "@types/react-redux": "^7.1.12",
     "@types/uuid": "8.3.1",
     "@types/victory": "^33.1.4",
@@ -33,7 +33,7 @@
     "react": "17.0.2",
     "react-devtools": "^4.18.0",
     "react-dom": "^17.0.2",
-    "react-native": "0.66.0-rc.4",
+    "react-native": "0.64.2",
     "react-native-background-fetch": "3.1.0",
     "react-native-background-geolocation": "3.10.0",
     "react-native-device-info": "^8.3.3",
@@ -62,7 +62,7 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-native": "^0.65.1",
-    "@types/react-test-renderer": "^17.0.2",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "27.2.2",
     "jest": "27.2.2",
     "metro-react-native-babel-preset": "0.66.2",
