--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@react-native-community/cli": "^5.0.1",
+    "@react-native-community/cli": "^6.3.1",
     "@react-native-community/slider": "^4.1.7",
     "@react-native-mapbox-gl/maps": "8.3.0",
     "@turf/distance": "^6.0.1",
@@ -29,11 +29,11 @@
     "d3": "^7.3.0",
     "eslint": "^8.7.0",
     "lodash": "^4.17.15",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-devtools": "^4.18.0",
+    "react-devtools": "^4.22.1",
     "react-dom": "^17.0.2",
-    "react-native": "0.64.2",
+    "react-native": "0.67.0",
     "react-native-background-fetch": "3.1.0",
     "react-native-background-geolocation": "3.10.0",
     "react-native-device-info": "^8.4.8",
@@ -67,7 +67,7 @@
     "jest": "27.4.7",
     "metro-react-native-babel-preset": "0.66.2",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "17.0.2",
     "ts-jest": "27.1.3",
     "typescript": "^4.5.4"
   },
