Use RN 0.68.3, the latest version that lacks Metro bundling error introduced in 0.69

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "repository": "git@github.com:jondubman/pathify.git",
   "author": "jondubman <jon@dubman.com>",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "@react-native-community/cli": "7.0.3",
+    "eslint": "^8.23.1"
+  }
 }
