--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@react-native-community/cli": "^6.4.0",
+    "@react-native-community/cli": "^7.0.3",
     "@react-native-community/slider": "^4.3.1",
     "@react-native-mapbox-gl/maps": "8.5.0",
     "@turf/distance": "^6.0.1",
@@ -27,13 +27,13 @@
     "@types/react-redux": "^7.1.24",
     "@types/uuid": "8.3.4",
     "d3": "^7.6.1",
-    "eslint": "^8.23.1",
+    "eslint": "8.23.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-devtools": "^4.23.0",
-    "react-dom": "^17.0.2",
-    "react-native": "0.67.1",
+    "react-dom": "18.1.0",
+    "react-native": "0.68.3",
     "react-native-background-fetch": "3.1.0",
     "react-native-background-geolocation": "3.10.0",
     "react-native-device-info": "^8.4.8",
@@ -56,18 +56,20 @@
     "victory-native": "^36.6.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/runtime": "^7.19.0",
+    "@babel/core": "7.18.2",
+    "@babel/eslint-parser": "^7.12.0",
+    "@babel/runtime": "7.18.2",
     "@react-native-community/eslint-config": "^3.1.0",
-    "@types/jest": "^29.0.1",
+    "@types/jest": "^29.0.2",
     "@types/react": "^18.0.19",
-    "@types/react-native": "^0.70.0",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react-native": "^0.68.0",
+    "@types/react-test-renderer": "^17.0.2",
     "babel-jest": "29.0.3",
     "jest": "29.0.3",
-    "metro-react-native-babel-preset": "0.72.2",
+    "metro-react-native-babel-preset": "0.67.0",
+    "prettier": "^2.7.1",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "17.0.2",
     "ts-jest": "29.0.0",
     "typescript": "^4.8.3"
   },
