--- a/app/package.json
+++ b/app/package.json
@@ -12,65 +12,63 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@react-native-community/slider": "^4.3.1",
+    "@react-native-community/slider": "^4.4.0",
     "@react-native-mapbox-gl/maps": "8.5.0",
-    "@turf/distance": "^6.0.1",
-    "@turf/helpers": "^6.1.4",
-    "@turf/turf": "^6.4.0",
+    "@turf/distance": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
+    "@turf/turf": "^6.5.0",
     "@types/d3": "^7.4.0",
-    "@types/lodash": "^4.14.185",
-    "@types/mapbox": "^1.6.39",
-    "@types/mapbox-gl": "^2.7.5",
-    "@types/radium": "^0.24.3",
+    "@types/lodash": "^4.14.191",
+    "@types/mapbox": "^1.6.42",
+    "@types/mapbox-gl": "^2.7.10",
+    "@types/radium": "^0.24.4",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-redux": "^7.1.24",
     "@types/uuid": "9.0.0",
-    "d3": "^7.6.1",
+    "d3": "^7.8.0",
     "eslint": "8.30.0",
-    "lodash": "^4.17.15",
-    "prop-types": "^15.8.1",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
-    "react-devtools": "^4.23.0",
     "react-dom": "18.1.0",
-    "react-native": "0.68.3",
+    "react-native": "0.68.5",
     "react-native-background-fetch": "4.1.7",
     "react-native-background-geolocation": "4.9.4",
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "0.2.0",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-haptic": "^1.0.1",
+    "react-native-haptic": "^1.0.9",
     "react-native-restart": "0.0.24",
     "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "13.1.0",
+    "react-native-svg": "13.6.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "7.1.0",
-    "react-redux": "^8.0.2",
-    "realm": "10.21.0",
+    "react-native-vector-icons": "9.2.0",
+    "react-redux": "^8.0.5",
+    "realm": "10.22.0",
     "redux": "^4.2.0",
-    "redux-saga": "^1.2.1",
-    "reselect": "^4.1.6",
-    "util": "^0.12.3",
+    "redux-saga": "^1.2.2",
+    "reselect": "^4.1.7",
+    "util": "^0.12.5",
     "uuid": "9.0.0",
-    "victory-native": "^36.6.6"
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "7.20.7",
-    "@babel/eslint-parser": "^7.12.0",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/runtime": "7.20.7",
-    "@react-native-community/eslint-config": "^3.1.0",
-    "@types/jest": "^29.0.2",
-    "@types/react": "^18.0.19",
-    "@types/react-native": "^0.68.0",
-    "@types/react-test-renderer": "^17.0.2",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@types/jest": "^29.2.4",
+    "@types/react": "^18.0.26",
+    "@types/react-native": "^0.70.8",
+    "@types/react-test-renderer": "18.0.0",
     "babel-jest": "29.3.1",
     "jest": "29.3.1",
-    "metro-react-native-babel-preset": "0.73.6",
-    "prettier": "^2.7.1",
+    "metro-react-native-babel-preset": "^0.67.0",
+    "prettier": "^2.8.1",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "17.0.2",
     "ts-jest": "29.0.3",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.4"
   },
   "jest": {
     "preset": "react-native",
