--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -1,26 +1,20 @@
+$RNMapboxMapsImpl = 'mapbox'
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 # Uncomment the next line to define a global platform for your project
 platform :ios, '14.1'
 
-# ignore all warnings from all pods
-# TODO really? Review.
-# inhibit_all_warnings!
-
-# ENV['REACT_NATIVE_MAPBOX_MAPBOX_IOS_VERSION'] = '~> 6.2.1';
-$ReactNativeMapboxGLIOSVersion = "~> 6.2.1"
+install! 'cocoapods', :deterministic_uuids => false
 
 def setupPathifyPods
 
+  production = ENV["PRODUCTION"] == "1"
+
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
-  use_frameworks! :linkage => :static
+  # use_frameworks! :linkage => :static
   # use_modular_headers!
-
-  # from https://stackoverflow.com/questions/13208202/ignore-xcode-warnings-when-using-cocoapods/13209057#13209057
-  # how to ignore warnings from a specific pod
-  # pod 'FBSDKCoreKit', :inhibit_warnings => true
 
   require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
   config = use_native_modules!
@@ -28,42 +22,18 @@ def setupPathifyPods
   # Flags change depending on the env values.
   flags = get_default_flags()
 
-  # old way TODO remove:
-  # use_react_native!(:path => config["reactNativePath"])
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
     # Upcoming versions of React Native may rely on get_default_flags(), but
     # we make it explicit here to aid in the React Native upgrade process.
+    :production => production,
     :hermes_enabled => false,
     :fabric_enabled => flags[:fabric_enabled],
-    # Enables Flipper. 
-    #
-    # Note that if you have use_frameworks! enabled, Flipper will not work and
-    # you should disable the next line.
     # :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
-
-  #   installer.pods_project.targets.each do |target|
-  #     # workaround per https://github.com/facebook/react-native/issues/24192
-  #     if target.name == "React"
-  #       target.remove_from_project
-  #     end
-
-  #     # workaround per https://github.com/facebook/react-native/issues/20492
-  #     # The following is needed to ensure the "archive" step works in XCode.
-  #     # It removes React & Yoga from the Pods project, as it is already included in the main project.
-  #     # Without this, you'd see errors when you archive like:
-  #     # "Multiple commands produce ... libReact.a"
-  #     # "Multiple commands produce ... libyoga.a"
-
-  #     targets_to_ignore = %w(React yoga)
-  #     if targets_to_ignore.include? target.name
-  #       target.remove_from_project
-  #     end
-  #   end
 end
 
 target 'PathifyUITests' do
@@ -79,9 +49,8 @@ target 'PathifyTest' do
   setupPathifyPods
 end
 
-# https://github.com/react-native-mapbox-gl/maps/blob/master/CHANGELOG.md#820-beta1
 pre_install do |installer|
-  $RNMBGL.pre_install(installer)
+  $RNMapboxMaps.pre_install(installer)
 end
 
 post_install do |installer|
@@ -101,14 +70,5 @@ post_install do |installer|
     end
   end
   react_native_post_install(installer)
-  # https://github.com/react-native-mapbox-gl/maps/blob/master/CHANGELOG.md#820-beta1
-  $RNMBGL.post_install(installer)
-
-  # From https://github.com/facebook/react-native/issues/31480#issuecomment-902912841
-  #
-  # ...but if you bump iOS deployment target, Flipper barfs again "Time.h:52:17: error: typedef redefinition with different types"
-  # We need to make one crude patch to RCT-Folly - set `__IPHONE_10_0` to our iOS target + 1
-  # https://github.com/facebook/flipper/issues/834 - 84 comments and still going...
-  `sed -i -e  $'s/__IPHONE_10_0/__IPHONE_15_0/' Pods/RCT-Folly/folly/portability/Time.h`
-
+  `sed -i -e  $'s/__IPHONE_12_0/__IPHONE_15_0/' Pods/RCT-Folly/folly/portability/Time.h`
 end
