--- a/app/package.json
+++ b/app/package.json
@@ -12,25 +12,24 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@react-native-community/slider": "^4.4.0",
-    "@react-native-mapbox-gl/maps": "8.5.0",
+    "@react-native-community/slider": "^4.4.2",
+    "@rnmapbox/maps": "rnmapbox/maps",
     "@turf/distance": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "@types/d3": "^7.4.0",
-    "@types/lodash": "^4.14.191",
+    "@types/lodash": "^4.14.195",
     "@types/mapbox": "^1.6.42",
-    "@types/mapbox-gl": "^2.7.10",
     "@types/radium": "^0.24.4",
-    "@types/react-native-vector-icons": "^6.4.12",
-    "@types/react-redux": "^7.1.24",
-    "@types/uuid": "9.0.0",
-    "d3": "^7.8.0",
-    "eslint": "8.30.0",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "@types/react-redux": "^7.1.25",
+    "@types/uuid": "9.0.2",
+    "d3": "^7.8.5",
+    "eslint": "8.43.0",
     "lodash": "^4.17.21",
-    "react": "17.0.2",
+    "react": "18.0.0",
     "react-dom": "18.1.0",
-    "react-native": "0.68.5",
+    "react-native": "0.69.11",
     "react-native-background-fetch": "4.1.7",
     "react-native-background-geolocation": "4.9.4",
     "react-native-device-info": "^10.3.0",
@@ -45,12 +44,12 @@
     "react-native-vector-icons": "9.2.0",
     "react-redux": "^8.0.5",
     "realm": "10.22.0",
-    "redux": "^4.2.0",
-    "redux-saga": "^1.2.2",
-    "reselect": "^4.1.7",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
+    "reselect": "^4.1.8",
     "util": "^0.12.5",
     "uuid": "9.0.0",
-    "victory-native": "^36.6.8"
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "7.20.7",
@@ -61,12 +60,12 @@
     "@types/react": "^18.0.26",
     "@types/react-native": "^0.70.8",
     "@types/react-test-renderer": "18.0.0",
-    "babel-jest": "29.3.1",
-    "jest": "29.3.1",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "prettier": "^2.8.1",
+    "babel-jest": "29.5.0",
+    "jest": "29.5.0",
+    "metro-react-native-babel-preset": "^0.70.3",
+    "prettier": "^2.8.8",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.0.0",
     "ts-jest": "29.0.3",
     "typescript": "^4.9.4"
   },
