Upgrade Mapbox to 10.0.13

--- a/app/package.json
+++ b/app/package.json
@@ -14,17 +14,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@react-native-community/datetimepicker": "^7.3.0",
     "@react-native-community/slider": "^4.4.2",
-    "@rnmapbox/maps": "rnmapbox/maps",
+    "@rnmapbox/maps": "^10.0.13",
     "@turf/distance": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "@types/d3": "^7.4.0",
-    "@types/lodash": "^4.14.195",
+    "@types/lodash": "^4.14.198",
     "@types/mapbox": "^1.6.42",
     "@types/radium": "^0.24.4",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-redux": "^7.1.25",
-    "@types/uuid": "9.0.2",
+    "@types/uuid": "9.0.3",
     "d3": "^7.8.5",
     "eslint": "8.43.0",
     "lodash": "^4.17.21",
