--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@react-native-community/datetimepicker": "^7.3.0",
     "@react-native-community/slider": "^4.4.3",
+    "@react-native/metro-config": "^0.72.11",
     "@rnmapbox/maps": "^10.0.13",
     "@turf/distance": "^6.5.0",
     "@turf/helpers": "^6.5.0",
@@ -30,7 +31,7 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.69.11",
+    "react-native": "0.72.4",
     "react-native-background-fetch": "4.2.1",
     "react-native-background-geolocation": "4.13.3",
     "react-native-device-info": "^10.9.0",
